# text_classification_in_rust

./: .gitignore  Cargo.toml
src/: main.rs  utils.rs
src/layer/: model.rs
