[package]
name = "create_transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
hf-hub = "0.4.2"
parquet = "55.0.0"
rand = "0.9.0"
tokenizers = "0.21.1"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.dev]
opt-level=1

[profile.release]
opt-level=3
